# osqp-cpp

./: CMakeLists.txt
include/: osqp++.h
src/: osqp++.cc
